javascript to show active student on iintial load
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3370 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/assessment_scores/fa_scores.html.erb
+++ b/app/views/assessment_scores/fa_scores.html.erb
@@ -51,5 +51,6 @@
   document.observe("dom:loaded", function() {
     $$('.student-link').invoke('observe','click',draw_report);
     $$('.student-link').invoke('observe','click',set_active);
+    set_active.call($('<%=@student.id%>'))
   });
 </script>
