link name to fa scores entry changed from fa groups to fa scores
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3371 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -28,7 +28,7 @@
 <div id="inner-tab-menu">
   <ul>
     <% if (@batch.cce_enabled? and  permitted_to? :exam_fa_groups,:assessment_scores and @exam.exam_group.cce_exam_category.present?) %>
-      <li><%= link_to t("fa_groups_text"),:controller=>:assessment_scores,:action=>"exam_fa_groups",:id=>@exam.id %></li>
+      <li><%= link_to "FA Scores",:controller=>:assessment_scores,:action=>"exam_fa_groups",:id=>@exam.id %></li>
     <% end %>
   </ul>
 </div>
