use exam icon in cce_report
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3373 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/cce_reports/create_reports.html.erb
+++ b/app/views/cce_reports/create_reports.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("/images/show_settings.png") %>
+  <img src="/images/examination/show_exam.png" alt="Exam" />
   <h1>CCE Reports</h1>
   <h3>Generate CCE Report</h3>
   <div id="app-back-button">
