--- a/app/views/cce_reports/index.html.erb
+++ b/app/views/cce_reports/index.html.erb
@@ -20,7 +20,7 @@
   <%= stylesheet_link_tag "exam/report_center"  %>
 <% end %>
 <div id="content-header">
-  <%= image_tag("/images/attendence/attendence.png") %>
+  <img src="/images/examination/show_exam.png" alt="Exam" />
   <h1>CCE Reports</h1>
   <h3>Home</h3>
   <div id="app-back-button">
