--- a/public/stylesheets/cce_reports/student_report_pdf.css
+++ b/public/stylesheets/cce_reports/student_report_pdf.css
@@ -18,9 +18,13 @@
     height: 1px;
 }
 
-h2.heading{
+h2{
     text-align: center;
     margin:5px;
+    font-size: 13px;
+}
+h3{
+    font-size: 14px;
 }
 
 #main_info h4{
@@ -50,28 +54,19 @@ h2.heading{
 
 }
 tr.even{
-    border: 1px solid #ADACAB;
+    border: 0px solid #ADACAB;
 }
 
 tr.odd{
-    border: 1px solid #ADACAB;
+    border: 0px solid #ADACAB;
 }
 
-.even td{
-
-    padding: 12px 12px 12px 15px;
-    border: 1px solid #ADACAB;
-    border-right: 0px solid #fff;
-    border-top: 0px solid #fff;
-
-}
-
-.odd td{
-    padding: 12px 12px 12px 15px;
-    border: 1px solid #ADACAB;
-    border-right: 0px solid #fff;
-    border-top: 0px solid #fff;
-
+td{
+    padding: 12px 5px 12px 5px;
+    border: 0px solid #ADACAB;
+    border-collapse: collapse;
+    width: 25px;
+    text-align: center;
 }
 
 td.col-pdf-bold{
@@ -79,22 +74,22 @@ td.col-pdf-bold{
 }
 
 .table-header td{
-    padding: 12px 12px 12px 15px;
-    border-top: 1px solid #ADACAB;
-    border-left: 1px solid #ADACAB;
-    border-right: 1px solid #ADACAB;
+/*    padding: 12px 12px 12px 15px;*/
+    border-top: 0px solid #ADACAB;
+    border-left: 0px solid #ADACAB;
+    border-right: 0px solid #ADACAB;
     color: #97080e;
     background: #EEEEEE;
 }
 .table-footer td{
     padding: 12px 12px 12px 15px;
-    border: 1px solid #ADACAB;
+    border: 0px solid #ADACAB;
     color: #97080e;
     background: #EEEEEE;
 }
 
 table#pdf-table{
-    border-top: 1px solid #ADACAB;
+    border-top: 0px solid #ADACAB;
     border-collapse:collapse
 }
 
@@ -110,7 +105,11 @@ table#pdf-table{
 
 }
 table{
-    border-right: 1px solid #ADACAB;
+    border-right: 0px solid #ADACAB;
+    font-size: 11px;
+/*    border-collapse: collapse;*/
+    margin-bottom: 20px;
+
 }
 .report{
     min-height: 1000px;
@@ -136,11 +135,20 @@ table{
     border: 1px solid #fff;
     border-bottom: 1px solid #ADACAB;
 }
-
+.subject{
+    text-align: left;
+    width: 100px;
+}
+.sl_no{
+    width: 10px;
+}
+.grade{
+    max-width: 10px;
+}
 .info1{
     margin-top: 15px;
-    font-size:14px;
-    font-weight:600;
+    font-size:13px;
+    font-weight:normal;
     color:#444444;
     margin-bottom:5px;
 }
