[FIXES BUG #3276]  style issue in report --message --CCE Reports Student-wise Report--"No students present in this batch"
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3383 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/cce_reports/_student_list.erb
+++ b/app/views/cce_reports/_student_list.erb
@@ -12,7 +12,9 @@
       <% end %>
     </ul>
   <% else %>
-    <%= t("no_students_in_batch")  %>
+    <div class="list_name">
+      <%= t("no_students_in_batch")  %>
+    </div>
   <% end %>
 <% end %>
 <script>
