no students display style change
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3385 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/cce_reports/_student_list.erb
+++ b/app/views/cce_reports/_student_list.erb
@@ -12,7 +12,7 @@
       <% end %>
     </ul>
   <% else %>
-    <div id="flash-box">
+    <div class="list_name">
       <%= t("no_students_in_batch")  %>
     </div>
   <% end %>
