[FIXES BUG#3277] pfd missing in CCE Transcript Report--student profile -report page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3386 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/cce_reports/_student_report.html.erb
+++ b/app/views/cce_reports/_student_report.html.erb
@@ -7,7 +7,7 @@
       <label class="field-label">Name</label>: <label class="infolbl"> <%= @student.full_name %></label>
     </div>
     <div class="info1">
-      <label class="field-label">Course</label>: <label class="infolbl"> <%= @student.batch.course.full_name %></label>
+      <label class="field-label">Course</label>: <label class="infolbl"> <%= @batch.course.full_name %></label>
     </div>
   </div>
   <div class="info-right">
@@ -15,7 +15,7 @@
       <label class="field-label">Adm No.</label>: <label class="infolbl"> <%= @student.admission_no.present? ? @student.admission_no : "-" %></label>
     </div>
     <div class="info1">
-      <label class="field-label">Batch</label>: <label class="infolbl"> <%= @student.batch.name %></label>
+      <label class="field-label">Batch</label>: <label class="infolbl"> <%= @batch.name %></label>
     </div>
   </div>
 </div>
@@ -124,4 +124,4 @@
     </div>
   <% end %>
 <% end %>
-<%= link_to "► PDF Report",{:action=>"student_report_pdf",:id=>@student.id},:target => '_blank', :class=> 'user_button' %>
+<%= link_to "► PDF Report",{:action=>"student_report_pdf",:id=>@student.id,:batch_id=>@batch.id},:target => '_blank', :class=> 'user_button' %>
