cce report fix in archived student report
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3390 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/cce_reports/_student_report.html.erb
+++ b/app/views/cce_reports/_student_report.html.erb
@@ -124,4 +124,4 @@
     </div>
   <% end %>
 <% end %>
-<%= link_to "► PDF Report",{:action=>"student_report_pdf",:id=>@student.id,:batch_id=>@batch.id},:target => '_blank', :class=> 'user_button' %>
+<%= link_to "► PDF Report",{:action=>"student_report_pdf",:id=>@student.id,:batch_id=>@batch.id,:type=>@type},:target => '_blank', :class=> 'user_button' %>
