student profile pdf adding page breaks
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3392 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/profile_pdf.erb
+++ b/app/views/student/profile_pdf.erb
@@ -19,75 +19,74 @@
 
 
 
-<div id="page-yield">
-
+<div id="page-yield" class="available_sections">
   <div class="hor_line"></div>
-
-  <div id="student_profile_heading">
-
+  <div id="student_profile_heading" class="section">
     <div id ="student_main_info">
       <h2> <%= @student.full_name %>  </h2>
       <h4><%= t('student_profile') %></h4>
     </div>
-
-    <div class="extender"> </div>
-
   </div>
 
-  <div id="new_profile_info_top">
-    <table id="pdf-table" width="100%" cellspacing="0">
-      <tr class="odd"><td class="col-pdf"><%= t('admission_number') %></td><td class="col-pdf"><%= @student.admission_no unless @student.admission_no.nil? %></td></tr>
-      <tr class="even"><td class="col-pdf"><%= t('admission_date') %></td><td class="col-pdf"><%= I18n.l(@student.admission_date,:format=>:normal) unless @student.admission_date.nil? %></td></tr>
-      <tr class="odd"><td class="col-pdf"><%= t('batch') %></td><td class="col-pdf"><%= @student.batch.name unless @student.batch.name.nil? %></td></tr>
-      <tr class="even"><td class="col-pdf"><%= t('course_text') %></td><td class="col-pdf"><%= @student.batch.course.full_name unless @student.batch.course.full_name.nil? %></td></tr>
-      <tr class="odd"><td><%= t('date_of_birth') %></td><td class="right"><%= I18n.l(@student.date_of_birth,:format=>:normal) unless @student.date_of_birth.nil? %></td></tr>
-      <tr class="even"><td><%= t('blood_group') %></td><td class="right"><%= @student.blood_group %></td></tr>
-      <tr class="odd"><td><%= t('gender') %></td><td class="right"><%= t("#{@student.gender_as_text.downcase}") %></td></tr>
-      <tr class="even"><td><%= t('nationality') %></td><td class="right"><%= @student.nationality.name unless @student.nationality_id.nil? %></td></tr>
-      <tr class="odd"><td><%= t('language') %></td><td class="right"><%= @student.language %></td></tr>
+  <table id="pdf-table" width="100%" cellspacing="0" class="section">
+    <tr class="odd"><td class="col-pdf"><%= t('admission_number') %></td><td class="col-pdf"><%= @student.admission_no unless @student.admission_no.nil? %></td></tr>
+    <tr class="even"><td class="col-pdf"><%= t('admission_date') %></td><td class="col-pdf"><%= I18n.l(@student.admission_date,:format=>:normal) unless @student.admission_date.nil? %></td></tr>
+    <tr class="odd"><td class="col-pdf"><%= t('batch') %></td><td class="col-pdf"><%= @student.batch.name unless @student.batch.name.nil? %></td></tr>
+    <tr class="even"><td class="col-pdf"><%= t('course_text') %></td><td class="col-pdf"><%= @student.batch.course.full_name unless @student.batch.course.full_name.nil? %></td></tr>
+    <tr class="odd"><td><%= t('date_of_birth') %></td><td class="right"><%= I18n.l(@student.date_of_birth,:format=>:normal) unless @student.date_of_birth.nil? %></td></tr>
+    <tr class="even"><td><%= t('blood_group') %></td><td class="right"><%= @student.blood_group %></td></tr>
+    <tr class="odd"><td><%= t('gender') %></td><td class="right"><%= t("#{@student.gender_as_text.downcase}") %></td></tr>
+    <tr class="even"><td><%= t('nationality') %></td><td class="right"><%= @student.nationality.name unless @student.nationality_id.nil? %></td></tr>
+    <tr class="odd"><td><%= t('language') %></td><td class="right"><%= @student.language %></td></tr>
 
-      <tr class="even"><td><%= t('category') %></td><td class="right"><%= @student.student_category.name unless @student.student_category.nil? %></td></tr>
-      <tr class="odd"><td><%= t('religion') %></td><td class="right"><%= @student.religion %></td></tr>
-      <tr class="even"><td><%= t('address') %></td><td class="right"><%= @student.address_line1%><%= ', ' unless @student.address_line1.blank? %><%=  @student.address_line2 %></td></tr>
-      <tr class="odd"><td><%= t('city') %></td><td class="right"><%= @student.city %></td></tr>
-      <tr class="even"><td><%= t('state') %></td><td class="right"><%= @student.state %></td></tr>
-      <tr class="odd"><td><%= t('zip') %></td><td class="right"><%= @student.pin_code %></td></tr>
-      <tr class="even"><td><%= t('country') %></td><td class="right"><%= @student.country.name unless @student.country_id.nil? %></td></tr>
-      <tr class="odd"><td><%= t('phone') %></td><td class="right"><%= @student.phone1 %></td></tr>
-      <tr class="even"><td><%= t('mobile') %></td><td class="right"><%= @student.phone2 %></td></tr>
-      <tr class="odd"><td><%= t('email') %></td><td class="right"><%= @student.email %></td></tr>
-      <tr class="even"><td><%= t('group_tutor') %></td><td class="right">
-          <% unless @student.batch.employee_id.nil? %>
-            <% @assigned_employees = Employee.find(:all,:conditions=>"FIND_IN_SET(id,\"#{@student.batch.employee_id}\")")  %>
+    <tr class="even"><td><%= t('category') %></td><td class="right"><%= @student.student_category.name unless @student.student_category.nil? %></td></tr>
+    <tr class="odd"><td><%= t('religion') %></td><td class="right"><%= @student.religion %></td></tr>
+    <tr class="even"><td><%= t('address') %></td><td class="right"><%= @student.address_line1%><%= ', ' unless @student.address_line1.blank? %><%=  @student.address_line2 %></td></tr>
+    <tr class="odd"><td><%= t('city') %></td><td class="right"><%= @student.city %></td></tr>
+    <tr class="even"><td><%= t('state') %></td><td class="right"><%= @student.state %></td></tr>
+    <tr class="odd"><td><%= t('zip') %></td><td class="right"><%= @student.pin_code %></td></tr>
+    <tr class="even"><td><%= t('country') %></td><td class="right"><%= @student.country.name unless @student.country_id.nil? %></td></tr>
+    <tr class="odd"><td><%= t('phone') %></td><td class="right"><%= @student.phone1 %></td></tr>
+    <tr class="even"><td><%= t('mobile') %></td><td class="right"><%= @student.phone2 %></td></tr>
+    <tr class="odd"><td><%= t('email') %></td><td class="right"><%= @student.email %></td></tr>
+    <tr class="even"><td><%= t('group_tutor') %></td><td class="right">
+        <% unless @student.batch.employee_id.nil? %>
+          <% @assigned_employees = Employee.find(:all,:conditions=>"FIND_IN_SET(id,\"#{@student.batch.employee_id}\")")  %>
 
-            <% @assigned_employees.each do |e| %>
-              <%= e.full_name %>
-              <br/>
-            <% end %>
-          </td></tr>
-
-      <% end  %>
-
-      <tr class="even"><td><%= t('immediate_contact') %></td><td class="right">
-          <%= @immediate_contact.full_name unless @immediate_contact.nil? %> <%= "(" + @immediate_contact.mobile_phone + ")" if @immediate_contact and !@immediate_contact.mobile_phone.empty? %>
+          <% @assigned_employees.each do |e| %>
+            <%= e.full_name %>
+            <br/>
+          <% end %>
         </td></tr>
-<% c = 'odd'  %>
-      <% unless  @additional_fields.empty? %>
-        <% @additional_fields.each do |field| %>
-          <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
-            <td><%= field.name %></td>
-            <td class="right">
-              <% detail = StudentAdditionalDetail.find_by_additional_field_id_and_student_id(field.id,@student.id) %>
-              <%= detail.additional_info unless detail.nil? %>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
 
-       <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
-       <td><%= t('previous_institution') %></td>
-        <td class="right"><%= @previous_data.institution unless @previous_data.nil?%></td></tr>
-    </table>
+    <% end  %>
 
-  </div>
+    <tr class="even"><td><%= t('immediate_contact') %></td><td class="right">
+        <%= @immediate_contact.full_name unless @immediate_contact.nil? %> <%= "(" + @immediate_contact.mobile_phone + ")" if @immediate_contact and !@immediate_contact.mobile_phone.empty? %>
+      </td></tr>
+    <% c = 'odd'  %>
+  </table>
+
+  <table id="pdf-table" width="100%" cellspacing="0" class="section">
+    <% unless  @additional_fields.empty? %>
+      <% @additional_fields.each_with_index do |field,i| %>
+        <% if (i+1)%28 == 0 %>
+        </table>
+      <%#*</div>%>
+      <%#*<div id="new_profile_info_top" class="section">%>
+        <table id="pdf-table" width="100%" cellspacing="0" class="section">
+        <% end %>
+        <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
+          <td class="col-pdf"><%= field.name %></td>
+          <td class="col-pdf">
+            <% detail = StudentAdditionalDetail.find_by_additional_field_id_and_student_id(field.id,@student.id) %>
+            <%= detail.additional_info unless detail.nil? %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+    <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
+      <td class="col-pdf"><%= t('previous_institution') %></td>
+      <td class="col-pdf"><%= @previous_data.institution unless @previous_data.nil?%></td></tr>
+  </table>
 </div>
