minimum width added for inner tab menus
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3399 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -498,6 +498,7 @@ body > #content_wrapper {
     padding : 0 10px !important;
     text-align : center;
     width : auto !important;
+    min-width: 50px !important;
 }
 #inner-tab-menu ul li a {
     color : #fff;
