added (%) to marks label in class designations and ranking levels [fixed #3216]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3403 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/class_designations/_course_class_designations.html.erb
+++ b/app/views/class_designations/_course_class_designations.html.erb
@@ -13,7 +13,7 @@
         </div>
       <% else %>
         <div class="label-field-pair">
-          <label for="marks"><%= t('marks') %></label>
+          <label for="marks"><%= t('marks') %> (%)</label>
           <div class="text-input-bg"><%= c.text_field :marks %></div>
         </div>
       <% end %>
