fixed heading style of consolidated report pdf [fixed #3225]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3404 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/exam/consolidated_exam_report_pdf.css
+++ b/public/stylesheets/exam/consolidated_exam_report_pdf.css
@@ -126,7 +126,7 @@ table#pdf-table{
     border-bottom: 1px solid #ADACAB;
 }
 
-#pdf-header{
+/*#pdf-header{
     width:1400px;
     padding-top: 30px;
     margin: 0 auto;
@@ -137,9 +137,9 @@ table#pdf-table{
     height: 120px;
     width:120px;
     float: left;
-}
+}*/
 
-.header-content{
+/*.header-content{
     color: #97080e;
     font-weight: bold;
     font-size: 25px;
@@ -147,7 +147,7 @@ table#pdf-table{
     width: 1400px;
     height: 110px;
     text-align: center;
-}
+}*/
 
 #pdf-footer{
     text-align: right;
