fixed style issue in combined report and pdf [fixed #3217]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3406 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/student_combined_report_pdf.html.erb
+++ b/app/views/exam/student_combined_report_pdf.html.erb
@@ -10,7 +10,7 @@
       <% unless @students.empty? %>
         <% unless @designations.blank? %>
           <% @designations.each do|designation| %>
-            <h4 align="center"><%= designation.name %></h4>
+            <h4><%= designation.name %></h4>
             <% designated_students = [] %>
             <% @students.each do|student| %>
               <% marks = GroupedExamReport.find_all_by_student_id_and_score_type(student.id,"c") %>
@@ -81,7 +81,7 @@
         <% end %>
         <% unless @levels.blank? %>
           <% @levels.each do|level| %>
-            <h4 align="center"><%= level.name %> <%= t('students') %></h4>
+            <h4><%= level.name %> <%= t('students') %></h4>
             <% unless level.subject_count.nil? %>
               <% scores = GroupedExamReport.find(:all,:conditions=>{:student_id=>@students.collect(&:id),:score_type=>"s"}) %>
             <% else %>
