added combined and individual pdf for grouped exam report [fixed #3177]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3408 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/_grouped_exam_report.erb
+++ b/app/views/exam/_grouped_exam_report.erb
@@ -152,4 +152,6 @@
     <% end %>
   </div>
 <% end %>
+<%= link_to " ► #{t('pdf_report')}",
+    { :action => "generated_report4_pdf", :batch_id => @batch.id, :student=>@student.id, :type=> @type},:target => '_blank', :class=> 'user_button' %>
 <div class="extender"></div>
