--- a/app/views/exam/generated_report4.html.erb
+++ b/app/views/exam/generated_report4.html.erb
@@ -26,7 +26,12 @@
   </div>
 </div>
 <div id="inner-tab-menu">
-
+  <ul>
+    <%  if permitted_to? :combined_grouped_exam_report_pdf,:exam %>
+      <li><%= link_to "#{t('pdf_report')}",
+          {:controller => "exam", :action => "combined_grouped_exam_report_pdf", :type => @type, :batch => @batch.id},:target => '_blank' %></li>
+    <% end %>
+  </ul>
 </div>
 <div id="page-yield">
   <% unless flash[:notice].nil? %>
