--- a/app/views/exam/generated_report4_pdf.erb
+++ b/app/views/exam/generated_report4_pdf.erb
@@ -20,7 +20,8 @@
 
 <div id="page-yield">
   <div class="hor_line"></div>
-
+  <h2><%= "Grouped Exam Report for Batch : "+@batch.full_name %></h2>
+  <div class="hor_line"></div>
   <div class="extender"> </div>
   <div class="report">
     <div id ="main_info">
